--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     details.accordion[open] > summary{border-bottom:1px solid var(--border)}
     details.accordion .content{padding:16px}
   </style>
-<script src="https://apis.google.com/js/api.js"></script></head>
+</head>
 <body>
 <header>
 <div class="wrap toolbar">
@@ -138,7 +138,7 @@
 <strong>搜尋</strong>
 <input id="searchInput" placeholder="姓名 / 電話 / 地址" style="width:220px" type="text"/>
 </div>
-<div class="right"><button class="accent" id="backup_button">☁️Google</button>
+<div class="right"><button class="accent" id="gdriveBackupBtn">☁️Google</button>
 <button class="accent" id="newBtn">新增訂單</button>
 <button id="newExpenseBtn">新增花費</button>
 <button id="exportJson">匯出JSON</button>
@@ -1443,149 +1443,81 @@ window.addEventListener('DOMContentLoaded', () => {
   }
 });
 </script>
-
-<script>function uploadBackupToDrive() {
-    console.log("🔄 備份開始");
-
-    const folderName = "訂單排程備份";
-
-    function ensureFolderExists(callback) {
-        gapi.client.drive.files.list({
-            q: `name='${folderName}' and mimeType='application/vnd.google-apps.folder' and trashed=false`,
-            fields: 'files(id, name)'
-        }).then(function(response) {
-            const files = response.result.files;
-            if (files && files.length > 0) {
-                console.log("📁 找到資料夾:", files[0].id);
-                callback(files[0].id);
-            } else {
-                const folderMetadata = {
-                    name: folderName,
-                    mimeType: 'application/vnd.google-apps.folder'
-                };
-                gapi.client.drive.files.create({
-                    resource: folderMetadata,
-                    fields: 'id'
-                }).then(function(folder) {
-                    console.log("📁 建立新資料夾:", folder.result.id);
-                    callback(folder.result.id);
-                });
-            }
-        }).catch((error) => {
-            console.error("❌ 搜尋或建立資料夾失敗", error);
-            alert("❌ 建立資料夾時發生錯誤：" + error.message);
-        });
-    }
-
-    ensureFolderExists(function(folderId) {
-        let now = new Date(); // 修正為 let 避免重複宣告
-        const dateStr = now.getFullYear() + '-' +
-                        String(now.getMonth() + 1).padStart(2, '0') + '-' +
-                        String(now.getDate()).padStart(2, '0') + '_' +
-                        String(now.getHours()).padStart(2, '0') + '-' +
-                        String(now.getMinutes()).padStart(2, '0') + '-' +
-                        String(now.getSeconds()).padStart(2, '0');
-
-        const metadata = {
-            name: `清洗訂單_${dateStr}.json`,
-            mimeType: 'application/json',
-            parents: [folderId]
-        };
-
-        try {
-            const orders = JSON.parse(localStorage.getItem("orders") || "[]");
-            const blob = new Blob([JSON.stringify(orders, null, 2)], { type: 'application/json' });
-            const file = new File([blob], metadata.name, { type: 'application/json' });
-
-            const accessToken = gapi.auth.getToken().access_token;
-            if (!accessToken) {
-                alert("❌ 尚未取得 Google 驗證權杖，請先登入 Google");
-                return;
-            }
-
-            const form = new FormData();
-            form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
-            form.append('file', file);
-
-            fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&fields=id', {
-                method: 'POST',
-                headers: new Headers({ 'Authorization': 'Bearer ' + accessToken }),
-                body: form,
-            })
-            .then((res) => res.json())
-            .then(function(file) {
-                console.log("✅ 備份成功:", file);
-                alert("✅ 備份完成！已儲存至 Google Drive 資料夾。");
-            })
-            .catch((error) => {
-                console.error("❌ 備份失敗", error);
-                alert("❌ 備份失敗：" + error.message);
-            });
-        } catch (e) {
-            console.error("❌ 備份發生錯誤", e);
-            alert("❌ 備份發生錯誤：" + e.message);
-        }
-    });
-}</script>
-
-
+<script src="https://apis.google.com/js/api.js"></script>
 
 <script>
-let CLIENT_ID = "894514639805-g3073pmjvadbasfp1g25r24rjhl9iacb.apps.googleusercontent.com";
-let SCOPES = "https://www.googleapis.com/auth/drive.file";
-let gapiInitialized = false;
-let driveReady = false;
+const CLIENT_ID = '894514639805-g3073pmjvadbasfp1g25r24rjhl9iacb.apps.googleusercontent.com';
+const SCOPES = 'https://www.googleapis.com/auth/drive.file';
+let tokenClient, gapiInited = false, gisInited = false;
 
-// 頁面載入完再執行初始化
-window.onload = () => {
-  console.log("🌐 載入 gapi...");
-  gapi.load("client:auth2", () => {
-    gapi.client.init({
-      clientId: CLIENT_ID,
-      scope: SCOPES,
-    }).then(() => {
-      gapiInitialized = true;
-      console.log("✅ Google API 初始化完成");
-
-      // 若已登入則開啟備份按鈕
-      if (gapi.auth2.getAuthInstance().isSignedIn.get()) {
-        driveReady = true;
-        document.getElementById("backup_button").disabled = false;
-      }
-    }, (err) => {
-      console.error("❌ 初始化失敗", err);
-      alert("Google API 初始化失敗，請檢查 client_id 設定與網路。");
-    });
+function gdriveInit() {
+  gapi.load('client', async () => {
+    await gapi.client.init({ apiKey: '', discoveryDocs: ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"] });
+    gapiInited = true;
   });
 
-  // 備份按鈕點擊行為
-  const btn = document.getElementById("backup_button");
-  if (btn) {
-    btn.addEventListener("click", async function () {
-      if (!gapiInitialized) {
-        alert("Google API 尚未初始化，請稍後再試");
+  tokenClient = google.accounts.oauth2.initTokenClient({
+    client_id: CLIENT_ID,
+    scope: SCOPES,
+    callback: async (tokenResponse) => {
+      if (tokenResponse.error) {
+        alert('授權失敗');
         return;
       }
+      uploadBackupToDrive();
+    }
+  });
+}
 
-      if (!gapi.auth2.getAuthInstance().isSignedIn.get()) {
-        try {
-          await gapi.auth2.getAuthInstance().signIn();
-          driveReady = true;
-          console.log("🔐 已登入 Google");
-        } catch (e) {
-          alert("❌ Google 登入失敗：" + e.error);
-          return;
-        }
-      }
+function uploadBackupToDrive() {
+  const data = {
+    orders: JSON.parse(localStorage.getItem('yl_clean_orders_v1') || '[]'),
+    staffList: JSON.parse(localStorage.getItem('yl_clean_staff_v1') || '[]'),
+    contactList: JSON.parse(localStorage.getItem('yl_clean_contact_v1') || '[]'),
+    exportedAt: new Date().toISOString()
+  };
+  const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
+  const metadata = {
+    name: `清洗訂單_${new Date().toISOString().split('T')[0]}.json`,
+    mimeType: 'application/json'
+  };
 
-      if (driveReady) {
-        uploadBackupToDrive();
-      }
-    });
-  }
+  const form = new FormData();
+  form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
+  form.append('file', blob);
+
+  fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
+    method: 'POST',
+    headers: new Headers({ 'Authorization': 'Bearer ' + gapi.auth.getToken().access_token }),
+    body: form
+  })
+  .then(res => res.json())
+  .then(res => {
+    if (res.id) alert('✅ 備份成功，上傳至你的 Google Drive！');
+    else alert('❌ 備份失敗：' + JSON.stringify(res));
+  })
+  .catch(err => {
+    console.error(err);
+    alert('❌ 備份發生錯誤');
+  });
+}
+
+document.getElementById('gdriveBackupBtn')?.addEventListener('click', () => {
+  if (!gapiInited) return alert('Google API 尚未初始化，請稍後再試');
+  tokenClient.requestAccessToken();
+});
+
+// 初始化
+window.onload = () => {
+  const script = document.createElement('script');
+  script.src = "https://accounts.google.com/gsi/client";
+  script.onload = () => {
+    gisInited = true;
+    gdriveInit();
+  };
+  document.body.appendChild(script);
 };
-</script>
-</body>
+</script></body>
 </html>
 <script>
 // 強制手風琴預設收合（解決部分瀏覽器 <details> 預設展開問題）
